--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Kickstart HTML CSS</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=48&id=20909&format=png" type="image/x-icon">
+<!-- <style>
+    h1{
+        color: red;
+    }
+</style> -->
 </head>
 <body>
-   <h2>I am a New Programmer</h2>
+    <div id="heading-parent">
+        <h1>I am a New Programmer</h1>
+    </div>
+   
 
 </body>
 </html>
